# Algorithms

1. CSV PARSER/: CMakeLists.txt  INFO1.txt  INFO2.txt
1. CSV PARSER/source/: main.cpp
1. CSV PARSER/source/Algorithms/: ALGO.cpp  ALGO.h
1. CSV PARSER/source/CSV/: CSV.cpp  CSV.h  Parser.cpp  Parser.h
1. CSV PARSER/source/DataTypes/: CSVLL.cpp  CSVLL.h
1. CSV PARSER/source/console/: console.cpp  console.h
1. CSV PARSER/source/res/: I.csv  TEST.csv  TESTII.csv  TESTIII.csv
2. RECURSIVE TURTLE/: CMakeLists.txt  INFO.txt
2. RECURSIVE TURTLE/source/: main.cpp
3. PROJECT/: CMakeLists.txt  LINKS.txt
3. PROJECT/basis/database/: database.cpp  database.h
3. PROJECT/basis/item/: item.cpp  item.h
3. PROJECT/source/: console.cpp  console.h  database.cpp  database.h  main.cpp  patient.cpp  patient.h
